# uasl_data_gathering

uasl_data_gathering/: CMakeLists.txt  package.xml
uasl_lidar_stereo_gather/: CMakeLists.txt  README.md  package.xml
uasl_lidar_stereo_gather/config/: mocap.yaml  params.yaml
uasl_lidar_stereo_gather/include/uasl_lidar_stereo_gather/: conversion_ros_eigen.hpp  convert_data_node.hpp  get_data_base.hpp  get_lidar_stereo_node.hpp  get_lidar_stereo_node_separated.hpp
uasl_lidar_stereo_gather/launch/: convert_data.launch  get_lidar_stereo.launch  get_lidar_stereo_separated.launch  record_stereo_lidar.launch
uasl_lidar_stereo_gather/src/: convert_data_node.cpp  get_data_base.cpp  get_lidar_stereo_node.cpp  get_lidar_stereo_node_separated.cpp
uasl_msg_gather/: CMakeLists.txt  README.md  package.xml
uasl_msg_gather/msg/: Pointcloud2_stereo.msg
