<package>
	<name>uasl_lidar_stereo_gather</name>
	<version>1.0.0</version>
	<description>Tools to gather LIDAR and stereo data for the UASL</description>

	<maintainer email="h.r.courtois@cranfield.ac.uk">Hugo Courtois</maintainer>

	<author>Hugo Courtois</author>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>tf2_ros</build_depend>
	<build_depend>tf2_msgs</build_depend>
	<build_depend>rosbag</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>uasl_image_acquisition</build_depend>
	<build_depend>uasl_msg_gather</build_depend>
	<build_depend>cv_bridge</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>tf2_ros</run_depend>
	<run_depend>tf2_msgs</run_depend>
	<run_depend>rosbag</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>uasl_image_acquisition</run_depend>
	<run_depend>uasl_msg_gather</run_depend>
	<run_depend>velodyne_pointcloud</run_depend>
	<run_depend>mocap_optitrack</run_depend>
	<run_depend>cv_bridge</run_depend>	
</package>
