<package>
  <name>uasl_msg_gather</name>
  <version>1.0.0</version>
  <description>Messages for gathering data in the UASL</description>

  <maintainer email="h.r.courtois@cranfield.ac.uk">Hugo Courtois</maintainer>

  <author>Hugo Courtois</author>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>eigen</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
